# SIgnSync-BE

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py
scripts/gunicorn_managing_uvicorn_workers/: .env.example  Dockerfile  docker-compose.yml
scripts/local_with_uvicorn/: .env.example  Dockerfile  docker-compose.yml
scripts/production_with_nginx/: .env.example  Dockerfile  docker-compose.yml
src/app/: main.py
src/app/admin/: initialize.py  views.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  health.py  login.py  logout.py  posts.py  predict.py  rate_limits.py  tasks.py  tiers.py  users.py
src/app/core/: config.py  health.py  schemas.py  security.py  setup.py
src/app/core/db/: crud_token_blacklist.py  database.py  models.py
src/app/core/ml/: predict.py  schema.py
src/app/core/ml/trained_model/: class_names.txt
src/app/core/utils/: cache.py  rate_limit.py
src/app/crud/: crud_posts.py  crud_rate_limit.py  crud_tier.py  crud_users.py
src/app/models/: __init__.py  post.py  rate_limit.py  tier.py  user.py
src/app/schemas/: job.py  post.py  rate_limit.py  tier.py  user.py
src/migrations/: env.py
src/scripts/: create_first_superuser.py
tests/: conftest.py  test_user.py
tests/helpers/: generators.py
